src/htdocs/modules/pager/0-0-1/css/index.scss
.pager {

	.disclaimer, .legend {
		display:block;
		font-size:.8em;
		color:#666;
	}
	.legend {
		font-style:italic;
	}
	.toggle {
		color:#00C;
		text-decoration:underline;
		cursor:pointer;
		display:block;
		font-size:.8em;
	}

	.mmi {
		display:inline-block;
		width:64px;
		padding:2px 8px;
		text-align:center;
		margin-right:8px;
		text-shadow:1px 1px 0 rgba(255, 255, 255, 0.3);
	}

	.mmiI {
		border:1px solid #999;
	}

	.pager-exposures {
		list-style:none;
		margin:0;
		padding:0;

		> li {
			clear:left;
			margin:6px 0;
			padding:4px 0;

			.mmi {
				cursor:pointer;
			}

			.population-value {
				float:right;
				margin:4px 0;
			}

			> dl {
				display:none;
				float:left;
				margin:8px 0 8px 72px;
				padding:0;
				font-size:.8em;
				color:#999;

				> dt, > dd {
					display:block;
					float:left;
					display:inline-block;
					margin:0 8px 0 0;
				}
				> dt {
					clear:left;

					&:after {
						content:':';
					}
				}
			}
			&.expanded > dl {
				display:block;
			}

		}
	}

	.pager-cities {
		list-style:none;
		margin:0;
		padding:0;

		> li {
			position:relative;
			margin:4px 0;
			padding:4px 72px 2px 0;
			white-space:nowrap;
			overflow:hidden;
			text-overflow:ellipsis;

			> .population {
				position:absolute;
				top:7px;
				bottom:6px;
				background-color:#fff;
				right:0;
				padding-left:8px;
				z-index:10;
				text-align:right;
			}
		}

		> .city-additional {
			display:none;
		}

		&.show-additional > .city-additional {
			display:block;
		}
	}
}

